<resources>
    <string name="app_name">MuseLogger</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_record">Record</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_setting">Setting</string>

    <string name="dialog_input_title">Input the experiment note</string>
    <string name="dialog_input_ok">OK</string>
    <string name="dialog_input_cancel">Cancel</string>

    <string name="eeg_channel_tp9">TP9</string>
    <string name="eeg_channel_tp10">TP10</string>
    <string name="eeg_channel_af7">AF7</string>
    <string name="eeg_channel_af8">AF8</string>
    <string name="eeg_channel_fpz">FPZ</string>

    <string name="dash_btn_instant_view">Instant View</string>
    <string name="dash_btn_emotion">Emotion</string>
    <string name="dash_btn_logger_view">Logger View</string>
    <string name="dash_btn_settings">Settings</string>

    <string name="muse_name_default">Unknown Muse</string>
    <string name="muse_mac_default">cannot get mac address</string>
    <string name="muse_connection_status_unknown">Unknown Status</string>
    <string name="muse_connection_status_connected">Connected</string>
    <string name="muse_connection_status_connecting">Connecting</string>
    <string name="muse_connection_status_disconnected">Disconnected</string>
    <string name="muse_connection_status_need_update">Need Update</string>
    <string name="muse_available_list">Available Muse Devices:</string>

    <string name="instant_no_data_tips">NO EEG data feed</string>
    <string name="instant_btn_action_record">Record</string>
    <string name="instant_btn_action_stop">Stop</string>

    <string name="snack_logging_title">MuseLogger is logging&#8230;</string>
    <string name="snack_logging_action">STOP</string>

    <string name="snack_save_title">Muse log is saved in %s</string>

    <string-array name="real_time_chart_mode">
        <item>Raw EEG</item>
        <item>Band Absolute</item>
        <item>Band Relative</item>
    </string-array>


</resources>
