<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:weightSum="3">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
        <View
                android:id="@+id/dashboard_upper_center"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"/>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@id/dashboard_upper_center">
            <com.chrisplus.muselogger.views.SquareArcView
                    android:id="@+id/dashboard_battery_indicator"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    app:arc_bottom_text="Battery"
                    app:arc_unfinished_color="@color/md_grey_300"
                    app:arc_text_color="@color/colorPrimaryDark"
                    app:arc_finished_color="@color/colorPrimaryDark"
            />
        </RelativeLayout>

        <com.chrisplus.muselogger.views.IndicatorArrayView
                android:id="@+id/dashboard_indicator_array"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/dashboard_upper_center"
                android:paddingTop="16dp"
                android:orientation="horizontal"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:orientation="vertical"
                  android:weightSum="2">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal">


            <com.chrisplus.muselogger.views.DashButtonView
                    android:id="@+id/dashboard_dash_instant"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:dashIcon="@drawable/ic_instantviewer"
                    app:dashTitle="@string/dash_btn_instant_view"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/md_blue_300"/>

            <com.chrisplus.muselogger.views.DashButtonView
                    android:id="@+id/dashboard_dash_emotion"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:dashIcon="@drawable/ic_emotion"
                    app:dashTitle="@string/dash_btn_emotion"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_blue_300"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal">


            <com.chrisplus.muselogger.views.DashButtonView
                    android:id="@+id/dashboard_dash_logviewer"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:dashIcon="@drawable/ic_logviewer"
                    app:dashTitle="@string/dash_btn_logger_view"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/md_blue_300"/>

            <com.chrisplus.muselogger.views.DashButtonView
                    android:id="@+id/dashboard_dash_settings"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:dashIcon="@drawable/ic_setting"
                    app:dashTitle="@string/dash_btn_settings"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>